fix horizontal space issue on mobile

--- a/src/scss/abstracts/_media-query.scss
+++ b/src/scss/abstracts/_media-query.scss
@@ -2,6 +2,9 @@
   .heroRight {
     display: none;
   }
+  .heroLeft {
+    width: 100vw;
+  }
 }
 
 @media screen and (max-width: 575px) {
