--- a/src/scss/themes/_main.scss
+++ b/src/scss/themes/_main.scss
@@ -1,4 +1,10 @@
 @use "../abstracts" as *;
+
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
 body {
   margin: 0;
   font-family: $body-font;
